# JointAttention

./: README.md  concatenating_image.py  pyproject.toml
data/: input.csv  labels.csv
data/patients/p1/: labels_ch_p1.txt  selected_gaze_ch_p1.txt
data/patients/p2/: labels_ch_p2.txt  selected_gaze_ch_p2.txt
data/patients/p3/: labels_ch_p3.txt  selected_gaze_ch_p3.txt
data/patients/p4/: labels_ch_p4.txt  selected_gaze_ch_p4.txt
data/patients/p5/: labels_ch_p5.txt  selected_gaze_ch_p5.txt
data/patients/p6/: labels_ch_p6.txt  selected_gaze_ch_p6.txt
data/patients/p7/: labels_ch_p7.txt  selected_gaze_ch_p7.txt
data/patients/p8/: labels_ch_p8.txt  selected_gaze_ch_p8.txt
data/patients/p9/: labels_ch_p9.txt  selected_gaze_ch_p9.txt
matlab_phase/: Read_files_elevation_Odi_solo_porta.m  Read_files_elevation_Odi_solo_porta_2pp.m  first_fig.fig  gaze360classification_Odi_solo.m  peopleid.m  peopleid2pp.m
models/: attention.py  cnn.py  mlp.py  mlp_attention.py  mlp_cnn.py
neuralnetwork/: attention_test.py  attention_training.py  get_image.py  modelli.py  test_dataloader.py
neuralnetwork/run_new/ALL/test/2023-11-17-01-01-44/: events.out.tfevents.1700179305.LAPTOP-AU25SKJV
neuralnetwork/weights/: checkpoint3.pt
preprocessing/: assemble_dataset.py  prepare_dataset.py
to_be_removed/: create_train_test_split.py
training/: attention_training.py  data_loader.py  train_model.py
training/weights/: checkpoint3.pt
utils/: adding_columns.py  concatenate_gaze.py  concatenate_labels.py  get_image.py
(+200 files in other folders)
